--- a/build.gradle
+++ b/build.gradle
@@ -34,10 +34,10 @@ dependencies {
 implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '3.4.1'	
 	
 
-	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+/*	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
 	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
 	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
-	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+	annotationProcessor "jakarta.persistence:jakarta.persistence-api"*/
 
 }
 
@@ -45,7 +45,7 @@ tasks.named('test') {
 	useJUnitPlatform()
 }
 
-def querydslDir = "src/main/generated"
+/*def querydslDir = "src/main/generated"
 
 sourceSets {
 main.java.srcDirs += [ querydslDir ]
@@ -55,4 +55,4 @@ options.getGeneratedSourceOutputDirectory().set(file(querydslDir))
 }
 clean.doLast {
 file(querydslDir).deleteDir()
-}
+}*/
