--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true 
 
 spring.thymeleaf.cache=false 
+
+#spotify.client.id=5599bee3670b4ce78e20765160bfe3ea
+#spotify.client.secret=527b41bc7ddf4aa3a3d4adad39fc5de0
+
