--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,6 @@ spring.jpa.show-sql=true
 
 spring.thymeleaf.cache=false 
 
-#spotify.client.id=5599bee3670b4ce78e20765160bfe3ea
-#spotify.client.secret=527b41bc7ddf4aa3a3d4adad39fc5de0
+spotify.client.id=5599bee3670b4ce78e20765160bfe3ea
+spotify.client.secret=527b41bc7ddf4aa3a3d4adad39fc5de0
 
