--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 	implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '3.4.1'	
 	implementation 'org.json:json:20240303'
 	implementation 'io.projectreactor:reactor-core:3.5.13'
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	
 
 /*	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
